k8s/default/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: latency-test-1
spec:
  host: latency-test-1
