k8s/default/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: latency-test-1
spec:
  hosts:
  - "*"
  gateways:
  - latency-test-gateway
  tcp:
  - match:
    - port: 80
      gateways:
        - latency-test-gateway
    route:
    - destination:
        host: latency-test-1.default.svc.cluster.local
        port:
          number: 8080
      weight: 100
